--- a/AllupVol2/Views/Shared/_Layout.cshtml
+++ b/AllupVol2/Views/Shared/_Layout.cshtml
@@ -1,4 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@using AllupVol2.Services.Interfaces
+
+@inject ILayoutService _layoutService
+@{
+    Dictionary<string,string> settings =await _layoutService.GetSettingAsync();
+}
+
+<!DOCTYPE html>
 <html class="no-js" lang="en">
   <!-- Mirrored from demo.hasthemes.com/allup/allup/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 04 Sep 2020 10:46:32 GMT -->
   <head>
@@ -162,7 +169,7 @@
                 <div class="header-logo-contact d-flex">
                   <div class="desktop-logo">
                     <a href="index.html">
-                      <img src="~/assets/images/logo.png" alt="Logo" />
+                      <img src="~/assets/images/@settings["logo"]" alt="Logo" />
                     </a>
                   </div>
                   <!-- desktop logo -->
@@ -174,7 +181,7 @@
                     <i class="icon ion-ios-telephone-outline"></i>
                     <div class="phone media-body">
                       <p>24/7 Support</p>
-                      <a href="tel:+48500500500">+48 500 500 500</a>
+                                        <a href="tel:@settings["phone"]">@settings["phone"]</a>
                     </div>
                   </div>
                   <div class="header-search media-body">
@@ -889,7 +896,7 @@
               <div class="col-sm-4 col-5">
                 <div class="mobile-logo text-center">
                   <a href="index.html">
-                    <img src="~/assets/images/logo.png" alt="Logo" />
+                    <img src="~/assets/images/@settings["logo"]" alt="Logo" />
                   </a>
                 </div>
                 <!-- mobile logo -->
@@ -1634,7 +1641,7 @@
                         </p>
                     </div>
                     <div class="payment">
-                        <img src="~/assets/images/payment.png" alt="payment" />
+                        <img src="~/assets/images/@settings["payments"]" alt="payment" />
                     </div>
                 </div>
                 <!-- footer copyright payment -->
