--- a/AllupVol2/Areas/Admin/Views/Category/Create.cshtml
+++ b/AllupVol2/Areas/Admin/Views/Category/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using AllupVol2.Areas.Admin.ViewModels
-@model CreateBrandVM
+@model CreateCategoryVM
 
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
