--- a/AllupVol2/Areas/Admin/Views/Product/Update.cshtml
+++ b/AllupVol2/Areas/Admin/Views/Product/Update.cshtml
@@ -10,7 +10,7 @@
                 Create Product
             </p>
             <form class="forms-sample" method="post">
-
+                
                 <div class="form-group">
                     <label asp-for="Name">Name</label>
                     <input asp-for="Name" class="form-control" placeholder="Name">
@@ -56,7 +56,7 @@
 
                 </div>
                 <div class="form-group">
-                    <label asp-for="CategoryId">Tax</label>
+                    <label asp-for="CategoryId">Category</label>
                     <select asp-for="CategoryId" class="form-control" asp-items="new SelectList(Model.Categories,nameof(Category.Id),nameof(Category.Name))">
                     </select>
                     <span class="text-danger" asp-validation-for="CategoryId"></span>
